syntax = "proto3";

package tim.api.g1;

message SpaceUpdate {
  string id = 1;
  oneof event {
    WorkspaceEntryAppend workspace_entry_append = 2;
    WorkspaceEntriesClear workspace_entries_clear = 3;
    SessionStatus session_status = 4;
    SessionHelp session_help = 5;
    SessionTheme session_theme = 6;
    SpaceNewMessage space_new_message = 7;
  }
}

message WorkspaceEntryAppend {
  CommandEntry entry = 1;
}

message WorkspaceEntriesClear {}

message SessionStatus {
  string status = 1;
}

message SessionHelp {
  string help = 1;
}

message SessionTheme {
  Theme theme = 1;
}

message CommandEntry {
  int64 id = 1;
  CommandRole role = 2;
  CommandContent content = 3;
}

enum CommandRole {
  COMMAND_ROLE_UNSPECIFIED = 0;
  COMMAND_ROLE_COMMAND = 1;
  COMMAND_ROLE_OUTPUT = 2;
}

message CommandContent {
  oneof value {
    string text = 1;
    string html = 2;
  }
}

message Message {
  string sender_id = 1;
  CommandEntry entry = 2;
}

message SpaceNewMessage {
  Message message = 1;
}

enum Theme {
  THEME_UNSPECIFIED = 0;
  THEME_NIGHT = 1;
  THEME_DAY = 2;
}

message SendMessageReq {
  string id = 1;
  string command = 2;
  string client_id = 3;
}

message SendMessageRes {
  string id = 1;
}

message SubscribeToSpaceReq {
  string client_id = 1;
}

service TimApi {
  rpc SendMessage(SendMessageReq) returns (SendMessageRes);
  rpc SubscribeToSpace(SubscribeToSpaceReq) returns (stream SpaceUpdate);
}
